# Ascii-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ascii-converter.hpp
scripts/: install.sh
src/: ascii-converter.cpp  ascii-converter.hpp  ascii-generator  main.cpp
